# yazo-labs-agno-governance

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  example.env  pyproject.toml  railway.json  requirements.txt
.github/workflows/: validate.yml
agents/: code_search.py  governance_agent.py  web_search.py
app/: config.yaml  main.py  settings.py
db/: __init__.py  session.py  url.py
docs/: create-new-agent.md  eval-and-improve.md  extend-agent.md  improve-agent.md  review-and-improve.md
evals/: __main__.py  cases.py  dotenv.py
scripts/: build_image.sh  entrypoint.sh  format.sh  generate_requirements.sh  validate.sh  venv_setup.sh
scripts/railway/: env-sync.sh  redeploy.sh  up.sh
